--- a/User-Console-Training.textile
+++ b/User-Console-Training.textile
@@ -36,7 +36,7 @@ with the console is pre-populated with common instance types:
 
 This configuration setting should be modifed to match if the default instance types are changed in
 the CLC configuration.
-@[instance_type]
+>[instance_type]
 m1.small.cpu: 1
 m1.small.mem: 512
 m1.small.disk: 5
@@ -47,7 +47,7 @@ m1.large.cpu: 2
 m1.large.mem: 1024
 m1.large.disk: 15
 m1.xlarge.cpu: 2
-m1.xlarge.mem: 2048@
+m1.xlarge.mem: 2048
 
 * Expandos
 
